2005-10-14

	* makewin32.sh: modified the optimization flags.

2005-10-14

	* src/main.c: win32: prohibit duplicate exec using CreateMutex().

2005-10-14

	* libsylph/procmime.c
	  src/compose.c: made some warnings just debug messages.

2005-10-14

	* libsylph/codeconv.c: changed the locale charset of Japanese Windows
	  from Shift_JIS to CP932.

2005-10-13

	* libsylph/codeconv.[ch]: enhanced the support of
	  environment-dependent Japanese characters (thanks to MORIYAMA).

2005-10-13

	* src/inputdialog.c
	  src/setup.c
	  src/mainwindow.c: modified the text of mailbox setup dialog.

2005-10-13

	* libsylph/utils.[ch]
	  src/mimeview.c: win32: use ShellExecute() to launch attachments, and
	  warn on launching an executable file.

2005-10-13

	* libsylph/folder.[ch]
	  src/prefs_folder_item.c
	  src/folderview.c: enabled the property of the top folder.
	* src/prefs_common_dialog.c: modified the text of key binding dialog.

2005-10-13

	* libsylph/imap.c: imap_cmd_ok(): fixed parsing of literal data (skip
	  quotes).

2005-10-12

	* libsylph/recv.c: recv_bytes(): null-terminate the received data
	  in case it's a string.
	  libsylph/imap.c: imap_cmd_ok(): also log literal strings.

2005-10-12

	* src/alertpanel.c: win32: make dialog in front on focus out.

2005-10-12

	* src/main.c: default_log_func(): fixed prefix on G_LOG_LEVEL_WARNING.

2005-10-12

	* libsylph/imap.c: imap_cmd_ok(): fixed parsing of literal data.

2005-10-12

	* src/summaryview.c: brought back 'Crate filter rule' in the context
	  menu.

2005-10-11

	* src/prefs_folder_item.c: fixed the label "Type" not aligned to right.

2005-10-11

	* libsylph/utils.[ch]
	  src/main.c: output g_log() messages to the log window and log file.
	* configure.in: disabled console window on win32.

2005-10-11

	* src/folderview.c: folderview_drag_motion_cb(): win32: reset
	  context->actions if modifier key is not pressed (fixed DnD action
	  becoming copy by default).

2005-10-10

	* libsylph/utils.c