@@ -1,3 +1,7 @@
+2005-10-16
+
+	* src/mimeview.c: win32: restrict launching of executable files.
+
 2005-10-14
 
 	* makewin32.sh: modified the optimization flags.
